[gd_scene load_steps=4 format=3 uid="uid://hrjpay0kg8xq"]

[ext_resource type="Script" path="res://GUI/Main_menu/MainMenu.gd" id="1_e87v6"]
[ext_resource type="FontFile" uid="uid://dpbkhg6dpiabo" path="res://Tools/TextThemes/Super_Mario_Bros._2.ttf" id="2_fbs7a"]
[ext_resource type="PackedScene" uid="uid://degedtmr3aw5v" path="res://GUI/Options_menu/OpcionesMenu.tscn" id="3_5jih0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e87v6")
change_scene = "res://GUI/Pause_menu/PauseMenu.tscn"

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fbs7a")
theme_override_font_sizes/font_size = 50
text = "Jugar"

[node name="OpcionesButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fbs7a")
theme_override_font_sizes/font_size = 40
text = "OPCIONES"

[node name="SalirButton" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fbs7a")
theme_override_font_sizes/font_size = 50
text = "SALIR"

[node name="OpcionesMenu" parent="." node_paths=PackedStringArray("menu_back") instance=ExtResource("3_5jih0")]
visible = false
layout_mode = 1
menu_back = NodePath("../Menu")

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/OpcionesButton" to="." method="_on_opciones_button_pressed"]
[connection signal="pressed" from="Menu/SalirButton" to="." method="_on_salir_button_pressed"]
